2010-05-05  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Joseph Pecoraro.

        Web Inspector: Doubleclick on line number should not trigger source editing.

        https://bugs.webkit.org/show_bug.cgi?id=38588

        * inspector/front-end/TextViewer.js:
        (WebInspector.TextViewer.prototype._handleDoubleClick):

2010-05-05  Martin Robinson  <mrobinson@webkit.org>

        Reviewed by Gustavo Noronha.

        [GTK] Enable DOM clipboard and drag-and-drop access
        https://bugs.webkit.org/show_bug.cgi?id=30623

        Add support in the PasteboardHelper for images, in preparation for drag-and-drop data.

        No new tests as functionality has not changed.

        * platform/gtk/PasteboardHelper.cpp:
        (WebCore::PasteboardHelper::fillSelectionData): Add support for images here.
        (WebCore::PasteboardHelper::targetListForDataObject): Add support for images here.

2010-05-05  Stuart Morgan  <stuartmorgan@chromium.org>

        Reviewed by Darin Fisher.

        Add a "focused" parameter to Widget::setFocus, and updates Document
        so that Widget is informed of focus loss as well as focus gain.
        Changes all existing setFocus implementations so that they ignore
        the 'false' case, so no behavior is changed until individual
        platforms are updated to handle the new case (if they want to).

        https://bugs.webkit.org/show_bug.cgi?id=37961

        * dom/Document.cpp:
        (WebCore::Document::setFocusedNode):
        * platform/Widget.h:
        * platform/android/WidgetAndroid.cpp:
        (WebCore::Widget::setFocus):
        * platform/chromium/WidgetChromium.cpp:
        (WebCore::Widget::setFocus):
        * platform/efl/WidgetEfl.cpp:
        (WebCore::Widget::setFocus):
        * platform/gtk/WidgetGtk.cpp:
        (WebCore::Widget::setFocus):
        * platform/haiku/WidgetHaiku.cpp:
        (WebCore::Widget::setFocus):
        * platform/mac/WidgetMac.mm: